ambassador-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v0
      kind:  Mapping
      name:  inventory_mapping
      prefix: /
      host: inventory.23.101.20.50.xip.io
      service: inventory-service:8080
spec:
  ports:
  - name: inventory
    port: 80
