inventory-deployment.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  selector:
    matchLabels:
      app: inventory-service
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: inventory-service
    spec:
      containers:
      - name: inventory-service
        image: venkateshbr/inventory:0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080      
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: inventory-service
  type: ClusterIP
