inventory-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventory-service
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: inventory.4b283f3f58a749c38a6f.southeastasia.aksapp.io
    http:
      paths:
      - backend:
          serviceName: inventory-service
          servicePort: 8080
